<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/category_mode_title"
        android:key="category_mode_settings">
        <CheckBoxPreference
            android:key="fade"
            android:title="@string/fade_title"
            android:summary="@string/fade_summary"
            android:defaultValue="true" />
        <ListPreference
            android:key="size"
            android:title="@string/size_title"
            android:summary="@string/size_summary"
            android:entries="@array/size_entries"
            android:entryValues="@array/size_values"
            android:dialogTitle="@string/size_title"
            android:defaultValue="@string/size_default" />
        <EditTextPreference
            android:key="pattern"
            android:title="@string/pattern_title"
            android:summary="@string/pattern_summary"
            android:dialogMessage="@string/pattern_message"
            android:singleLine="true"
            android:maxLength="40"
            android:defaultValue="#0:#1" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/category_color_title"
        android:key="category_color_settings">
        <ListPreference
            android:key="colorGamut"
            android:title="@string/colorGamut_title"
            android:summary="@string/colorGamut_summary"
            android:entries="@array/colorGamut_entries"
            android:entryValues="@array/colorGamut_values"
            android:dialogTitle="@string/colorGamut_title"
            android:defaultValue="@string/colorGamut_default" />
        <CheckBoxPreference
            android:key="colorDaylight"
            android:title="@string/colorDaylight_title"
            android:summary="@string/colorDaylight_summary"
            android:defaultValue="true" />
        <!--
        <CheckBoxPreference
            android:key="colorDuplex"
            android:title="@string/colorDuplex_title"
            android:summary="@string/colorDuplex_summary"
            android:defaultValue="false" />
            -->
    </PreferenceCategory>
    <!--
    <PreferenceCategory
        android:title="@string/category_time_title"
        android:key="category_time_settings">
        <ListPreference
            android:key="timeSystem"
            android:title="@string/timeSystem_title"
            android:summary="@string/timeSystem_summary"
            android:entries="@array/timeSystem_entries"
            android:entryValues="@array/timeSystem_values"
            android:dialogTitle="@string/timeSystem_title"
            android:defaultValue="@string/timeSystem_default" />
        <CheckBoxPreference
            android:key="timeSeconds"
            android:title="@string/timeSeconds_title"
            android:summary="@string/timeSeconds_summary"
            android:defaultValue="false" />
        <ListPreference
            android:key="numberSystem"
            android:title="@string/numberSystem_title"
            android:summary="@string/numberSystem_summary"
            android:entries="@array/numberSystem_entries"
            android:entryValues="@array/numberSystem_values"
            android:dialogTitle="@string/numberSystem_title"
            android:defaultValue="@string/numberSystem_default" />
        <CheckBoxPreference
            android:key="baseConvert"
            android:title="@string/baseConvert_title"
            android:summary="@string/baseConvert_summary"
            android:defaultValue="true" />
    </PreferenceCategory>
    -->
</PreferenceScreen>